# babbel-helper-agents

./: .env.example  .gitignore  babbel_utils.py  consolidate.py  export_babbel.py  generate_stats.py  get_inactive_users.py  invite_user.py  refill_credits.py  switch_plan.py  sync_sharepoint.py
.opencode/: CONVENTIONS.md
.opencode/agents/: babbel.md
.opencode/skills/: babbel-export.md  babbel-invite.md  babbel-nutzer-verwaltung.md  babbel-recommendations.md  babbel-refill.md  babbel-stats.md  babbel-switch.md  babbel-sync.md
slack-bot/app/BabbelBot/: README.md  babbel_tools.py  main.py  pyproject.toml
slack-bot/app/BabbelBot/model/: load.py
